--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+\
+
 <html>
 <head>
 
@@ -8,8 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
-
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+	  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 
@@ -21,32 +22,64 @@
 		#map {
 			width: 600px;
 			height: 400px;
+			position: relative;
+			padding-left: 
+
 		}
+		.container {
+	  	display: grid;
+			grid-template-columns: 1fr 3fr 1fr;
+			grid-template-rows: 2fr 5fr 2fr;
+	  }
+
+		.grid_item {
+			border: 1px solid black;
+		}
+
 	</style>
 </head>
 <body>
 <h1>{% csrf_token %}<h1>
-<div id="map"></div>
+
+<div class="container">
+<div class="grid_item"><h1>Left map padding</h1></div>
+<div class="grid_item" id="map"></div>
+<div class="grid_item"><h1>right map padding</h1></div>
+<div class="grid_item"></div>
+<div class="grid_item">
+		<p>
+		AC Transit offers an open API with arrival prediction times and delay updates. There are many apps that use this API to see real time arrival predictions. A field returned by an API call returns how many seconds the bus is delayed before its arrival at the next stop. This backend service periodically polls the API to collect and average these delays. The map on the website then queries the database for the most recent delay for each line and colors each bus route according to its average delay.
+		</p>
+</div>
+<div class="grid_item"></div>
+</div>
+
+
+
 
 <script>
 
 function getColor(d) {
-    return d > 1000 ? '#800026' :
-           d > 500  ? '#BD0026' :
-           d > 200  ? '#E31A1C' :
-           d > 100  ? '#FC4E2A' :
-           d > 50   ? '#FD8D3C' :
-           d > 20   ? '#FEB24C' :
-           d > 10   ? '#FED976' :
-                      '#FFEDA0';
+
+    return d > 500 ? '#ffffcc' :
+           d > 250  ? '#ffeda0' :
+           d > 200  ? '#fed976' :
+           d > 100  ? '#feb24c' :
+           d > 50   ? '#fd8d3c' :
+           d > 20   ? '#fc4e2a' :
+           d > 0   ? '#e31a1c' :
+                      '#b10026';
 }
 
 function style(feature) {
     return {
+				// Add an if IF NOT NONE
         fillColor: getColor(feature.properties.delay),
-        weight: 2,
+				color: getColor(feature.properties.delay),
+				// Default color is nothingg???
+				weight: 3,
         opacity: 1,
-        color: 'white',
+
         dashArray: '3',
         fillOpacity: 0.7
     };
@@ -54,9 +87,12 @@ function style(feature) {
 
 
 $(document).ready(()=>{
+
 	var mymap = L.map('map').setView([37.725685, -122.15683], 7);
 
-	L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+
+
+	var usmap = L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
 		maxZoom: 18,
 		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
 			'<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
@@ -64,58 +100,40 @@ $(document).ready(()=>{
 		id: 'mapbox.streets'
 	}).addTo(mymap);
 
+	$.post("http://0.0.0.0:8000/get_avg_delay_for_route/", {data: "72"}, (results) => {
+			console.log("route 72 geojson-->", results);
+			L.geoJSON(results, { style: style(results) }).addTo(mymap);
+		});
 
-	$.post("http://0.0.0.0:8000/get_avg_delay_for_route/", (results) => {
-		  console.log(results)
-		 	L.geoJSON(results).addTo(mymap);
-	});
-
-	// var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
-	// console.log(csrftoken);
-
-		//
-		// $.ajax({
-    // url : "http://0.0.0.0:8000/get_avg_delay_for_route/",
-    // type: "POST",
-		// beforeSend: function(request) {
-		// 	console.log($("#csrfmiddlewaretoken").val());
-		// 	//request.setRequestHeader("fake", "header");,
-		//
-	  //   request.setRequestHeader("X-CSRFToken", csrftoken);},
-    // //data : {'csrfmiddlewaretoken': csrftoken},
-		// contentType: "application/json; charset=utf-8",
-		// //headers: {"X-CSRFToken": csrftoken},
-		// crossDomain: true,
-		// //data: {csrfmiddlewaretoken: '{{ csrf_token }}'},
-    // dataType : "jsonp",
-    // success: function( data ){
-		// 	console.log(results);
-		// 	L.geoJSON(results).addTo(mymap);
-    // 	}
-		// });
-
- 	});
+		$.post("http://0.0.0.0:8000/get_avg_delay_for_route/", {data: "1"}, (results) => {
+				console.log("route 1 geojson-->", results);
+				console.log(results);
+				L.geoJSON(results, { style: style(results) }).addTo(mymap);
+			});
 
 
-	// $.post("http://0.0.0.0:8000/get_points/", (results) => {
-	// 	  console.log(results)
-	// 	 	L.geoJSON(results).addTo(mymap);
-	// });
-	// $.post("http://0.0.0.0:8000/get_avg_delay_for_route/", {'csrfmiddlewaretoken': '{{ csrf_token }}' }, (results) => {
-	// 	  console.log(results);
-	// 	 	L.geoJSON(results).addTo(mymap);
+//  21 35 54
+
+	// $("#72").click( () => {
+	// 	$.post("http://0.0.0.0:8000/get_avg_delay_for_route/", {data: 72}, (results) => {
+	// 			console.log("the style-->", style(results));
+	// 			json_layer = L.geoJSON(results, { style: style(results) }).addTo(mymap);
+	// 		});
 	// });
 
-	// $.ajaxSetup({
-	//     beforeSend: function(xhr, settings) {
-	//         if (!(/^http:.*/.test(settings.url) || /^https:.*/.test(settings.url))) {
-	//             // Only send the token to relative URLs i.e. locally.
-	// 						console.log("CSRF token in AJAX setup-->", ("#csrfmiddlewaretoken").val())
-	//             xhr.setRequestHeader("X-CSRFToken",
-	//                                  $("#csrfmiddlewaretoken").val());
-	//         }
-	//     }
-	// });
+
+});
+
+
+// var myStyle = {
+// 	fillColor: getColor(properties.delay),
+// 	weight: 2,
+// 	opacity: 1,
+// 	color: 'white',
+// 	dashArray: '3',
+// 	fillOpacity: 0.7
+// };
+
 </script>
 </body>
 </html>
